--- a/config/locales/activerecord/ja.yml
+++ b/config/locales/activerecord/ja.yml
@@ -17,6 +17,9 @@ ja:
         password_confirmation: 'パスワード確認'
         last_name: '姓'
         first_name: '名'
+      board:
+        title: 'タイトル'
+        body: '本文'
   date:
     abbr_day_names:
     - 日
