--- a/config/locales/views/ja.yml
+++ b/config/locales/views/ja.yml
@@ -28,6 +28,9 @@ ja:
        no_result: '掲示板がありません。'
      new:
        title: '掲示板作成'
+     create:
+       success: '掲示板を作成しました'
+       fail: '掲示板を作成できませんでした'
 
    user_sessions:
      new:
