--- a/config/locales/activerecord/ja.yml
+++ b/config/locales/activerecord/ja.yml
@@ -10,6 +10,7 @@ ja:
     models:
       user: 'ユーザー'
       board: '掲示板'
+      comment: 'コメント'
     attributes:
       user:
         email: 'メールアドレス'
@@ -20,6 +21,9 @@ ja:
       board:
         title: 'タイトル'
         body: '本文'
+        board_image: 'サムネイル'
+      comment:
+        body: 'コメント'
   date:
     abbr_day_names:
     - 日
