feat: 掲示板の編集、削除機能の実装

--- a/config/locales/views/ja.yml
+++ b/config/locales/views/ja.yml
@@ -6,6 +6,7 @@ ja:
      post: '投稿'
      message:
       require_login: 'ログインしてください'
+      delete_confirm: '削除しますか？'
 
    users:
      new:
@@ -34,6 +35,13 @@ ja:
        fail: '掲示板を作成できませんでした'
      show:
       title: '掲示板詳細'
+     edit:
+      title: '掲示板編集'
+     update:
+      success: '掲示板を更新しました'
+      fail: '掲示板を更新できませんでした'
+     destroy:
+      success: '掲示板を削除しました'
     
    comments:
      create:
