--- a/config/locales/views/ja.yml
+++ b/config/locales/views/ja.yml
@@ -4,6 +4,7 @@ ja:
      register: '登録'
      logout: 'ログアウト'
      post: '投稿'
+     serach_word: '検索ワード'
      message:
       require_login: 'ログインしてください'
       delete_confirm: '削除しますか？'
