--- a/config/locales/activerecord/ja.yml
+++ b/config/locales/activerecord/ja.yml
@@ -20,12 +20,17 @@ ja:
         first_name: '名'
         full_name: '氏名'
         avatar: 'アバター'
+        role: '権限'
       board:
         title: 'タイトル'
         body: '本文'
         board_image: 'サムネイル'
+        user: '作成者'
       comment:
         body: 'コメント'
+      id: 'ID'
+      created_at: '作成日時'
+      updated_at: '更新日時'
   date:
     abbr_day_names:
     - 日
@@ -200,3 +205,8 @@ ja:
       long: "%Y/%m/%d %H:%M"
       short: "%m/%d %H:%M"
     pm: 午後
+  enums:
+    user:
+      role:
+        general: '一般'
+        admin: '管理者'
