--- a/config/locales/views/ja.yml
+++ b/config/locales/views/ja.yml
@@ -6,11 +6,15 @@ ja:
      post: '投稿'
      search_word: '検索ワード'
      edit: '編集'
+     show: '詳細'
+     delete: '削除'
+     unspecified: '指定なし'
      message:
       require_login: 'ログインしてください'
       delete_confirm: '削除しますか？'
       updated: 'ユーザーを更新しました'
       not_updated: 'ユーザーを更新できませんでした'
+      not_authorized: '権限がありません'
 
    users:
      new:
@@ -101,3 +105,35 @@ ja:
      dashboards:
        index:
          title: 'ダッシュボード'
+     boards:
+       index:
+         title: '掲示板一覧'
+         id: 'ID'
+         board_title: 'タイトル'
+         author: '作成者'
+         created_at: '作成日時'
+       destroy:
+         success: '掲示板を削除しました'
+       update:
+         success: '掲示板を更新しました'
+       edit:
+         title: '掲示板編集'
+       show:
+         title: '掲示板詳細'
+     users:
+       index:
+         title: 'ユーザー一覧'
+         id: 'ID'
+         created_at: '作成日時'
+         full_name: '氏名'
+         role: '権限'
+       show:
+         title: 'ユーザー詳細'
+         id: 'ID'
+         Role: '権限'
+         created_at: '作成日時'
+       edit:
+         title: 'ユーザー編集'
+         role: '権限'
+       destroy:
+         success: 'ユーザーを削除しました'
